--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -14,6 +14,15 @@
     font-family: 'Baloo 2', cursive;
 }
 
+.word{
+    color: white;
+    text-decoration: none;
+}
+
+.word:hover{
+    color: antiquewhite;
+}
+
 .text{
     font-family: 'Baloo 2', cursive;
     color: White;
